fix(styles): remove those painful scrollbars from project view

--- a/src/components/specific/files/files-manager/FilesManager.scss
+++ b/src/components/specific/files/files-manager/FilesManager.scss
@@ -2,15 +2,22 @@
   position: relative;
 
   &:deep() {
+    --header-height: 38px;
+    --submenu-height: 28px;
+
+    .bimdata-card__header {
+      height: var(--header-height);
+    }
+
     .bimdata-card__submenu {
+      height: var(--submenu-height);
       z-index: 5;
     }
 
     .bimdata-card__content {
       position: relative;
       z-index: 0;
-      height: calc(100% - 37px - 27px);
-      overflow: hidden;
+      height: calc(100% - var(--header-height) - var(--submenu-height));
 
       display: grid;
       grid-template-columns: 400px 1fr;
